# axon

./: .env.example  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  start-ea.bat
backend/: =2.0.0  Dockerfile  pyproject.toml
backend/axon/: __init__.py  audit.py  bot_manager.py  code_specialists.py  config.py  decisions.py  discord_bot.py  guardrails.py  lifecycle.py  logging.py  main.py  middleware.py  org.py  org_templates.py  push.py  registry.py  runner_host.js  runner_manager.py  runner_scaffold.py  scheduler.py  scheduler_jobs.py  self_regulation.py  slack_bot.py  structured_output.py  teams_bot.py  test_audit.py  test_config.py  test_usage.py  usage.py  voice.py  voice_catalog.py  worker_types.py  ws_registry.py  zoom_bot.py
backend/axon/agents/: __init__.py  agent.py  axon_agent.py  boardroom.py  conversation.py  disagreement.py  external_agent.py  huddle.py  intent_router.py  provider.py  shared_tools.py  tool_router.py  tools.py
backend/axon/browser/: __init__.py  config.py  executor.py  extractor.py  manager.py  tools.py
backend/axon/calendar/: __init__.py  aggregator.py  types.py
backend/axon/commands/: slash_commands.py
backend/axon/comms/: __init__.py  approval_handler.py  config.py  constants.py  contacts.py  credentials.py  executor.py  executor_meetings.py  inbound.py  senders.py  senders_discord.py  senders_teams.py  senders_zoom.py  tools.py  tools_meetings.py
backend/axon/db/: __init__.py  agent_engine.py  agent_fts.py  agent_models.py  base.py  encryption.py  engine.py  models.py  test_encryption.py
backend/axon/discovery/: __init__.py  executor.py  models.py  searcher.py  store.py  tools.py
backend/axon/integrations/: __init__.py  base.py  config.py  credentials.py  executor.py  registry.py
backend/axon/media/: __init__.py  config.py  executor.py  tools.py  youtube.py
backend/axon/migrations/: migrate_task_statuses.py
backend/axon/patterns/: models.py  registry.py  resolver.py
backend/axon/performance/: models.py  tracker.py
backend/axon/personas/: _template.yaml  axon.yaml  axon_instructions.md  boardroom.yaml  boardroom_instructions.md  diana.yaml  diana_instructions.md  huddle.yaml  huddle_instructions.md  marcus.yaml  marcus_instructions.md  raj.yaml  raj_instructions.md
backend/axon/pipelines/: engine.py  loader.py  models.py
backend/axon/plugins/: __init__.py  base.py  compat.py  config.py  executor.py  instance.py  loader.py  manifest.py  migration.py  registry.py  resolver.py
backend/axon/reasoning/: __init__.py  config.py  engine.py  graph.py  models.py  prompts.py  strategies.py  tools.py
backend/axon/research/: __init__.py  config.py  executor.py  synthesizer.py  templates.py  tools.py
backend/axon/routes/: __init__.py  achievements.py  agents.py  analytics.py  approvals.py  audit.py  boardroom.py  calendar.py  conversations.py  credentials.py  dashboard.py  discovery.py  external_agents.py  git_repos.py  host_agents.py  huddle.py  integrations.py  issues.py  lifecycle.py  models.py  org_chart.py  orgs.py  performance.py  pipelines.py  plugin_instances.py  plugins.py  push.py  recruitment.py  sandbox.py  sandbox_images.py  skills.py  skills_crud.py  tasks.py  teams_webhook.py  usage.py  user_prefs.py  vaults.py  voices.py  worker_control.py  worker_setup.py  (+1 more)
backend/axon/runner_template/: base_bridge.js  browser_bridge.js  claude_bridge.js  claude_bridge.py  claude_util.js  (+9 more)
backend/tests/: test_audit.py  test_config.py  test_worker_types.py
(+576 files in other folders)
