[project]
name = "axon"
version = "0.1.0"
description = "Self-hosted AI command center — your personal chief of staff"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "litellm>=1.55.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "watchdog>=6.0.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1",
    "piper-tts>=1.2.0",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
