[project]
name = "axon"
version = "0.1.0"
description = "Self-hosted AI command center — your personal chief of staff"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0,<16",
    "litellm>=1.55.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "watchdog>=6.0.0",
    "tiktoken>=0.8.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
voice = [
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1",
    "piper-tts>=1.2.0",
]
discord = [
    "discord.py>=2.4.0",
]
web = [
    "trafilatura>=1.12.0",
]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
